eks/00-namespace-and-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthcare
